@@ -5,6 +5,7 @@ PKG = epkg
 ELS   = $(PKG).el
 ELS  += $(PKG)-desc.el
 ELS  += $(PKG)-list.el
+ELS  += $(PKG)-melpa.el
 ELS  += $(PKG)-util.el
 ELCS  = $(ELS:.el=.elc)
 
